remove scrollbars for windows on mkt-nav (bug 1157285)

--- a/src/media/css/elements--nav.styl
+++ b/src/media/css/elements--nav.styl
@@ -112,7 +112,7 @@ mkt-nav {
     font-size: 18px;
     height: 100%;
     left: -1 * $nav--width;
-    overflow-y: scroll;
+    overflow: hidden;
     position: fixed;
     top: 0;
     transition: unquote($nav--transition + ', opacity 0s linear 300ms');
@@ -134,7 +134,7 @@ mkt-nav-child {
     height: 100%;
     left: -1 * $nav--width;
     list-style: none inside;
-    overflow-y: scroll;
+    overflow: hidden;
     position: absolute;
     top: 0;
     transition: unquote($nav--transition);
